# pidioul

./: .gitignore  docker-compose.yml  main.py  migration.py  pyproject.toml  readme.md  settings.yaml  test.py
cogs/: admin.py  chess.py  loader.py  test.py
docker/: Dockerfile
migrations/: 001_create_color_table.py  002_create_piece_table.py  003_create_gameboard_table.py  004_create_runtimeconfig_table.py
models/: game.py
seeders/: 001_colors.py  002_pieces.py
src/: database.py  game.py  pidioul.py  utils.py
src/models/: color.py  gameboard.py  piece.py  runtimeConfig.py
src/views/: play.py
