[tool.poetry]
name = "pidioul"
version = "0.1.0"
description = ""
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
chess = "^1.9.3"
"discord.py" = "^2.0.1"
dynaconf = "^3.1.9"
peewee = "^3.15.2"
peewee-migrate = "^1.5.1"
CairoSVG = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
